@@ -1,665 +1,458 @@
-# TradeStreamEE: High-Frequency Trading Reference Architecture
+# TradeStreamEE: Low-Latency Trading on Jakarta EE
 
-TradeStreamEE shows how Jakarta EE applications can achieve low-latency, high-throughput performance by combining modern messaging (Aeron), efficient serialization (SBE), and a concurrent garbage collector like Azul C4.
+A Payara Platform (Jakarta EE 11) application that serves two purposes:
 
-The application simulates a high-frequency trading dashboard that ingests 30,000-100,000 market data messages per second, processes them in real-time, and broadcasts updates to a web frontend without the latency spikes associated with traditional Java garbage collection.
+1. **GC Performance Comparison** - Side-by-side benchmark of Azul C4 vs G1GC under realistic allocation pressure from market data ingestion
+2. **Trading System Reference** - A matching engine, risk engine, portfolio analytics, and technical analysis built with idiomatic Java 21
 
-## Core Technologies
+The application simulates a high-frequency trading desk that ingests market data via Aeron IPC + SBE (zero-copy binary), processes it through a price-time priority matching engine, computes risk metrics, and streams results to a browser dashboard via WebSocket.
 
-TradeStreamEE combines four key technologies:
+## Prerequisites
 
-### Aeron (Transport)
-
-Ultra-low latency messaging that bypasses the network stack when components run on the same machine. Data moves directly through shared memory instead of through kernel networking.
-
-### SBE (Serialization)
-
-Simple Binary Encoding is the financial industry standard for high-frequency trading. Encodes data as compact binary rather than human-readable text, eliminating parsing overhead and reducing memory allocation.
-
-### Payara Micro 7.2025.2 (Jakarta EE Runtime)
-
-A cloud-native Jakarta EE 11 application server that provides Jakarta CDI for dependency injection, Jakarta WebSocket for real-time browser communication, and Jakarta REST for REST endpoints. Lightweight (~100MB) and fast-starting.
-
-### Azul Platform Prime 21 (Runtime)
-
-A JVM with the C4 (Continuously Concurrent Compacting Collector) garbage collector. C4 performs cleanup concurrently with application execution, avoiding the stop-the-world pauses that cause latency spikes in traditional JVMs. Azul markets C4 as a "pauseless" collector due to its sub-millisecond pause times across all heap sizes.
-
-Integration: Payara Micro manages the Aeron publisher/subscriber lifecycle via CDI. The publisher encodes market data into binary using SBE, sends it through Aeron's shared memory transport, and the subscriber decodes it without allocating Java objects. This minimal garbage generation allows C4's concurrent collection to handle cleanup while maintaining flat latency at high throughput.
-
-## Project Motivation
-
-Enterprise Java applications must often balance two competing requirements:
-
-1. High Throughput: Ingesting massive data streams (IoT, Financial Data).
-2. Low Latency: Processing data without stop-the-world pauses.
-
-Standard JVMs (using G1GC or ParallelGC) exhibit latency spikes under high load, potentially causing UI freezes or missed SLAs.
-TradeStreamEE shows that through combining a modern, broker-less transport (Aeron) with a concurrent runtime (Azul C4), standard Jakarta EE applications can achieve microsecond-level latency and high throughput.
-
-### Comparison Methodology
-
-This project facilitates a side-by-side JVM comparison using identical architectural choices:
-
-* Architecture: Both clusters use AERON IPC + Zero-Copy SBE by default.
-* Ingestion: Both clusters support DIRECT mode (naive string processing) via the `TRADER_INGESTION_MODE` flag.
-* Variable: The only difference is the JVM (Azul C4 vs Standard G1GC).
-
-This isolation ensures that observed performance differences are attributable solely to the Garbage Collector.
+- Docker and Docker Compose (for containerized deployment)
+- Java 21+ JDK (for building from source; Maven wrapper included)
 
 ## Quick Start
 
-### Primary Use Case: Side-by-Side JVM Comparison
-
-TradeStreamEE enables side-by-side JVM comparison by deploying both clusters simultaneously under identical workloads.
-Both clusters execute the same application binary and configuration, isolating the garbage collector as the sole variable.
-This approach allows for real-time observation of performance differences in a shared environment.
+### Side-by-Side JVM Comparison (Primary Use Case)
 
 ```bash
 ./start-comparison.sh all
 ```
 
-This command builds and deploys both the Azul C4 cluster (ports 8080-8083) and the G1GC cluster (ports 9080-9083), along with the complete monitoring stack (Prometheus, Grafana, Loki).
+Deploys both Azul C4 and G1GC clusters (3 instances each) plus a full monitoring stack (Prometheus, Grafana, Loki).
 
-Once deployed, access the applications:
-
-- C4 Cluster: http://localhost:8080/trader-stream-ee/
-- G1 Cluster: http://localhost:9080/trader-stream-ee/
-
-The "GC Pause Time (Live)" chart in Grafana shows the performance characteristics: C4 maintains consistent latency (≤1ms pauses), while G1GC exhibits spikes and sawtooth patterns under load.
+| Endpoint   | URL                                     |
+|:-----------|:----------------------------------------|
+| C4 Cluster | http://localhost:8080/trader-stream-ee/ |
+| G1 Cluster | http://localhost:9080/trader-stream-ee/ |
+| Grafana    | http://localhost:3000 (admin/admin)     |
+| Prometheus | http://localhost:9090                   |
 
 Other options:
 
-- `./start-comparison.sh` - Clusters only, no monitoring stack (faster for rapid development)
-- `./stop-comparison.sh` - Stop all comparison services
+```bash
+./start-comparison.sh           # Clusters only, no monitoring
+./start-comparison.sh direct    # DIRECT ingestion mode (GC stress test)
+./start-comparison.sh all direct # Full deployment, GC stress mode
+./stop-comparison.sh            # Tear everything down
+```
 
----
+### Single-JVM Testing
 
-### Single-JVM Testing (start.sh)
+```bash
+./start.sh azul-aeron          # Azul Prime (C4) + Aeron (peak performance)
+./start.sh standard-direct     # Eclipse Temurin (G1GC) + Direct (baseline)
+./start.sh azul-direct         # C4 with high allocation (stabilizes legacy code)
+./start.sh standard-aeron      # G1GC with Aeron (tests architectural improvement)
+```
 
-Use `./start.sh` for testing individual configurations or architectural modes. This runs ONE JVM at a time for focused testing.
+Cluster modes (3 instances + Traefik LB + Hazelcast):
 
-| Scenario                 | Command                      | JVM                    | Architecture      | Purpose                                                          |
-|:-------------------------|:-----------------------------|:-----------------------|:------------------|:-----------------------------------------------------------------|
-| Modern Stack             | `./start.sh azul-aeron`      | Azul Prime (C4)        | Aeron (Optimized) | Peak performance with concurrent GC + zero-copy transport        |
-| Legacy Baseline          | `./start.sh standard-direct` | Eclipse Temurin (G1GC) | Direct (Heavy)    | Baseline: high allocation on G1GC, expect jitter                 |
-| Fixing Legacy Code       | `./start.sh azul-direct`     | Azul Prime (C4)        | Direct (Heavy)    | Show how C4 stabilizes high-allocation apps without code changes |
-| Optimizing Standard Java | `./start.sh standard-aeron`  | Eclipse Temurin (G1GC) | Aeron (Optimized) | Test if architectural optimization helps G1GC performance        |
+```bash
+./start.sh cluster             # C4 + Aeron cluster
+./start.sh cluster-standard    # G1GC + Aeron cluster
+./start.sh cluster-direct      # C4 + Direct cluster
+./start.sh cluster-dynamic 5   # Scale to N instances on the fly
+```
 
-Utilities:
+Utilities: `logs`, `status`, `stop`, `clean`
 
-- `./start.sh logs` - View live logs
-- `./start.sh stop` - Stop containers
-- `./start.sh clean` - Deep clean (remove volumes/images)
+## Architecture Overview
 
-## Technical Architecture
+```
+MarketDataPublisher (synthetic)
+  |  SBE binary encode (off-heap)
+  v
+Aeron IPC (shared memory, stream 1001)
+  |
+  v
+MarketDataFragmentHandler (SBE flyweight decode, zero-copy)
+  |
+  +---> MatchingEngine (order matching, execution)
+  +---> BarAggregator (OHLCV bars, ta4j indicators)
+  +---> MarketDataBroadcaster (JSON, 1:50 sampling)
+         |
+         +---> Hazelcast ITopic (cluster fan-out)
+         |
+         v
+       WebSocket (/market-data, /executions, /indicators, /sla)
+         |
+         v
+       Browser Dashboard
+```
 
-The application implements a Hybrid Architecture:
+**GC monitoring runs in parallel:** `GCPauseMonitor` registers as a JMX `NotificationListener` on all `GarbageCollectorMXBean` instances, records every pause duration, computes percentiles (P50/P95/P99/P999), and pushes SLA violation events to WebSocket clients.
 
-1. Ingestion Layer (Broker-less):
-   * Uses Aeron IPC (Inter-Process Communication) via an Embedded Media Driver.
-   * Bypasses the network stack for ultra-low latency between components.
-2. Serialization Layer (Zero-Copy):
-   * Uses Simple Binary Encoding (SBE).
-   * Decodes messages directly from memory buffers (Flyweight pattern) without allocating Java Objects, reducing GC pressure.
-3. Application Layer (Jakarta EE 11):
-   * Payara Micro 7 serves as the container.
-   * CDI manages the lifecycle of the Aeron Publisher and Subscriber.
-   * Jakarta Concurrency 3.1 uses Virtual Threads for high-throughput memory pressure simulation.
-   * WebSockets push updates to the browser.
-4. Runtime Layer:
-   * Azul Platform Prime uses the C4 Collector to clean up garbage created by the WebSocket layer concurrently, ensuring a flat latency profile.
+### Ingestion Modes
+
+Configurable via `TRADER_INGESTION_MODE` (`AERON` or `DIRECT`).
+
+| Mode            | Path                                                                   | Allocation     | Purpose                                           |
+|:----------------|:-----------------------------------------------------------------------|:---------------|:--------------------------------------------------|
+| AERON (default) | Publisher -> SBE binary -> Aeron IPC -> FragmentHandler -> Broadcaster | Low (off-heap) | Production-grade zero-copy pipeline               |
+| DIRECT          | Publisher -> JSON + 1KB padding -> Broadcaster                         | High (on-heap) | Stress-test GC behavior under allocation pressure |
+
+### Domain Model
+
+```
+MatchingEngine
+  |-- PriceTimePriorityMatcher (price-time priority algorithm)
+  |-- StopOrderTracker (stop, stop-limit, trailing-stop promotion)
+  |-- IcebergOrderHandler (display quantity management)
+  |-- OrderBook (NavigableMap<Price, LinkedList<OrderBookEntry>>)
+  |
+  +--> Execution --> PositionTracker --> RiskEngine
+  |                    |                     |-- Historical VaR
+  |                    |                     |-- Parametric VaR
+  |                    |                     |-- Stress scenarios (sealed interface)
+  |                    |                     +-- Exposure summary
+  |                    |
+  |                    +---> PortfolioService
+  |                           |-- NAV tracking
+  |                           |-- Sharpe ratio, max drawdown, win rate
+  |                           +-- Rebalance plan generation
+  |
+  +--> BarAggregator --> IndicatorService
+                           |-- SMA, EMA, RSI, MACD, Bollinger Bands, ATR
+                           +-- ta4j integration
+```
+
+`Order` and `Price` are Java records. `Price` uses fixed-point arithmetic (`long` ticks at 1/10000 scale) to avoid floating-point issues in the matching hot path. `StressScenario` is a sealed interface with five record implementations (`FlashCrash`, `VolatilitySpike`, `LiquidityFreeze`, `CorrelationBreakdown`, `InterestRateShock`).
 
 ## Tech Stack
 
-| Component  | Technology                            | Role                                      |
-|:-----------|:--------------------------------------|:------------------------------------------|
-| Runtime    | Azul Platform Prime 21                | Concurrent JVM with C4 garbage collector. |
-| App Server | Payara Micro 7.2025.2 (Jakarta EE 11) | Cloud-native Jakarta EE runtime.          |
-| Transport  | Aeron                                 | Low-latency, high-throughput messaging.   |
-| Encoding   | SBE (Simple Binary Encoding)          | Binary serialization (FIX standard).      |
-| Frontend   | HTML5 / Chart.js                      | Real-time visualization via WebSockets.   |
-| Build      | Docker / Maven                        | Containerized deployment.                 |
-
-## Ingestion Architectures
-
-The application supports two ingestion architectures, configurable via the `TRADER_INGESTION_MODE` environment variable (`AERON` or `DIRECT`). Both Azul C4 and G1GC clusters can run either mode, allowing for flexible performance testing.
-
-```mermaid
-graph TD
-    subgraph DIRECT["DIRECT Mode (High Allocation)"]
-        D1[Publisher] --> D2["JSON + 1KB padding"]
-        D2 --> D3[Broadcaster]
-        D3 --> D4["WebSocket → Browser"]
-    end
-
-    subgraph AERON["AERON Mode (Zero-Copy, Default)"]
-        A1[Publisher] --> A2["SBE Binary"]
-        A2 --> A3["Aeron IPC"]
-        A3 --> A4["Fragment Handler"]
-        A4 --> A5[Broadcaster]
-        A5 --> A6["WebSocket → Browser"]
-    end
-
-    classDef heavy fill:#dc3545,stroke:#c82333,stroke-width:2px,color:#fff
-    classDef optimized fill:#28a745,stroke:#218838,stroke-width:2px,color:#fff
-
-    class D1,D2,D3,D4 heavy
-    class A1,A2,A3,A4,A5,A6 optimized
-```
-
-### DIRECT Mode (High Allocation Path)
-
-Goal: Simulate a standard, naive enterprise application with high object allocation rates.
-
-Use Case: Stress-testing GC behavior under high allocation pressure.
-
-Implementation:
-
-1. Publisher generates synthetic market data as POJOs
-2. Allocation converts data to JSON String using StringBuilder (high allocation)
-3. Artificial Load wraps JSON in 1KB padding to stress the Garbage Collector
-4. Transport via direct method call to MarketDataBroadcaster
-5. WebSocket pushes heavy JSON to browser
-
-Performance Characteristics:
-
-- High Allocation: Gigabytes of temporary String objects per second
-- GC Pressure: Frequent pauses on G1GC; C4's concurrent collection maintains sub-millisecond pauses
-
-### AERON Mode (Optimized Path, Default)
-
-Goal: Low-latency financial pipeline using off-heap memory and zero-copy semantics.
-
-Use Case: Production-grade performance with minimal GC impact.
-
-Implementation:
-
-1. Publisher generates synthetic market data
-2. SBE Encoder writes binary format to off-heap direct buffer (zero-copy)
-3. Aeron IPC publishes to shared memory ring buffer (kernel bypass)
-4. Fragment Handler reads using SBE "Flyweights" (reusable views, no allocation)
-5. Transformation converts to compact JSON for WebSocket
-6. WebSocket pushes lightweight JSON to browser
-
-Performance Characteristics:
-
-- Low Allocation: Minimal garbage in the ingestion hot-path
-- High Throughput: Aeron IPC handles millions of messages/sec with sub-microsecond latency
-- Both JVMs benefit from reduced allocation; C4 maintains consistent latency profile
-
-## Configuration & Tuning
-
-You can tweak the performance characteristics via `docker-compose.yml` or the `.env` file (if created).
-
-### Ingestion Modes (`TRADER_INGESTION_MODE`)
-
-Controls how data moves from the Publisher to the Processor.
-
-* `AERON` (Default): Uses the high-speed binary ring buffer.
-* `DIRECT`: Bypasses Aeron; generates Strings directly in the Publisher loop. Useful for isolating Transport vs. GC overhead.
-
-### JVM Tuning & Configuration
-
-Heap size varies by deployment type:
-
-| Deployment                        | Dockerfiles                                     | Heap Size | Reason                                                  |
-|:----------------------------------|:------------------------------------------------|:----------|:--------------------------------------------------------|
-| Single Instance (`start.sh`)      | `Dockerfile`, `Dockerfile.standard`             | 8GB       | Full heap for maximum throughput                        |
-| Clustered (`start-comparison.sh`) | `Dockerfile.scale`, `Dockerfile.scale.standard` | 4GB       | Balanced for 3-instance deployments (~12GB per cluster) |
-
-Common JVM options:
-
-```dockerfile
-# Azul Prime (C4) - 8GB single instance example
-ENV JAVA_OPTS="-Xms8g -Xmx8g \
-    -XX:+AlwaysPreTouch \
-    -XX:+UseTransparentHugePages \
-    -XX:-UseBiasedLocking \
-    -XX:+UseStringDeduplication \
-    -XX:+OptimizeStringConcat \
-    -XX:+UseContainerSupport \
-    -XX:MaxRAMPercentage=75.0 \
-    -Djava.net.preferIPv4Stack=true"
-
-# Standard JDK (G1GC) - 4GB cluster example
-ENV JAVA_OPTS="-Xms4g -Xmx4g \
-    -XX:+UseG1GC \
-    -XX:+AlwaysPreTouch \
-    -XX:+UseTransparentHugePages \
-    -XX:+UseStringDeduplication \
-    -XX:+OptimizeStringConcat \
-    -XX:+UseContainerSupport \
-    -XX:MaxRAMPercentage=75.0 \
-    -Djava.net.preferIPv4Stack=true"
-```
-
-Infrastructure improvements:
-
-- Pre-touch Memory (`-XX:+AlwaysPreTouch`): Pre-allocates heap pages to eliminate runtime allocation overhead
-- Transparent Huge Pages (`-XX:+UseTransparentHugePages`): Reduces TLB misses for large memory operations
-- String Deduplication (`-XX:+UseStringDeduplication`): Automatically deduplicates duplicate strings in the background, reducing heap pressure for JSON-heavy workloads (applied to both C4 and G1GC for fair comparison)
-- String Concat Optimization (`-XX:+OptimizeStringConcat`): Optimizes StringBuilder chains used extensively in JSON construction
-- Container Memory Awareness (`-XX:+UseContainerSupport` + `-XX:MaxRAMPercentage=75.0`): Enables JVM to respect container memory limits and allocate heap dynamically (75% of container memory)
-- Biased Locking Disabled (`-XX:-UseBiasedLocking`): Disabled for C4 (no generational object aging), applied consistently for fair comparison
-- GC Logging: Detailed event logging with decorators for analysis
-- Rate-Limited Logging: Prevents log flooding during high-throughput operations
-
-Note: Azul Platform Prime uses C4 by default; we don't specify `-XX:+UseG1GC` since C4 is the native, optimized collector for Azul Prime.
-
-### GC Monitoring & Stress Testing
-
-The application includes comprehensive GC monitoring and memory pressure testing capabilities to show JVM performance differences:
-
-#### GC Statistics Collection
-
-GCStatsService collects real-time garbage collection metrics via JMX MXBeans:
-
-* Collection Metrics: Total collection count and time for each GC type
-* Pause Time Analysis: Individual pause durations with percentile calculations (P50, P95, P99, P99.9, Max)
-* Memory Usage: Heap memory utilization (total, used, free)
-* Recent Pause History: Last 100 pause times for trend analysis
-* GC Phase Breakdown: Sub-phase timing analysis for detailed performance investigation (vendor-specific)
-
-#### Memory Pressure Stress Testing
-
-MemoryPressureService generates controlled memory allocation using scenario-based testing that targets specific garbage collector weaknesses. Rather than generic high-allocation stress, each scenario exposes fundamental algorithmic differences between G1 and C4.
-
-Design Principles:
-
-* Lower allocation rates (100-500 MB/sec) that allow normal GC behavior rather than pathological thrashing
-* Multi-threaded allocation (4 threads) mirroring production web servers and trading systems
-* Focus on pause time metrics rather than throughput
-* Scenarios that work consistently across 2GB-4GB heap sizes
-
-Test Scenarios:
-
-| Scenario        | Allocation | Live Set               | What It Tests                                             |
-|:----------------|:-----------|:-----------------------|:----------------------------------------------------------|
-| STEADY_LOAD     | 200 MB/sec | 512 MB stable          | Baseline young generation collection behavior             |
-| GROWING_HEAP    | 150 MB/sec | 100 MB → 2 GB over 60s | Mixed collection pause scaling with live set size         |
-| PROMOTION_STORM | 300 MB/sec | 1 GB (50% survival)    | Old generation collection efficiency under high promotion |
-| FRAGMENTATION   | 200 MB/sec | 1 GB fragmented        | Compaction behavior with small objects (100-1000 bytes)   |
-| CROSS_GEN_REFS  | 150 MB/sec | 800 MB in old gen      | Remembered set overhead from old→young references         |
-
-Expected Behavior:
-
-* G1: Stop-the-world pauses that scale with live set size, remembered set scanning overhead, compaction pauses under fragmentation
-* C4: Pauses ≤1ms across all scenarios due to concurrent collection, no remembered sets, concurrent compaction
-
-Each scenario uses 4 parallel virtual threads to generate allocation load. This multi-threaded pattern shows G1's stop-the-world impact when all application threads must pause simultaneously.
-
-#### GC Scenario Control
-
-The web UI includes scenario selection controls that allow:
-
-* Real-time switching between test scenarios
-* Visual feedback showing current scenario and allocation rate
-* Side-by-side pause time visualization with phase breakdown
-* Observation of collector behavior under specific pathological conditions
-
-This feature enables targeted observation of G1's architectural limitations versus C4's concurrent collection model.
-
-## Monitoring & Observability
-
-When running `./start-comparison.sh all`, the following monitoring stack is deployed:
-
-| Component         | Access                              | Purpose                       |
-|:------------------|:------------------------------------|:------------------------------|
-| Grafana Dashboard | http://localhost:3000 (admin/admin) | JVM comparison dashboards     |
-| Prometheus        | http://localhost:9090               | Metrics collection            |
-| Loki              | http://localhost:3100               | Log aggregation               |
-| C4 Application    | http://localhost:8080 (Traefik LB)  | Azul C4 cluster (3 instances) |
-| G1 Application    | http://localhost:9080 (Traefik LB)  | G1GC cluster (3 instances)    |
-
-Direct instance access:
-
-- C4 instances: http://localhost:8081, http://localhost:8082, http://localhost:8083
-- G1 instances: http://localhost:9081, http://localhost:9082, http://localhost:9083
-
-### Stress Testing
-
-Use the UI or API to apply memory pressure scenarios and observe GC behavior differences:
-
-```bash
-# Apply test scenarios via API
-curl -X POST http://localhost:8080/api/pressure/mode/STEADY_LOAD      # Baseline test
-curl -X POST http://localhost:8080/api/pressure/mode/GROWING_HEAP     # Mixed GC scaling
-curl -X POST http://localhost:8080/api/pressure/mode/PROMOTION_STORM  # Old gen pressure
-curl -X POST http://localhost:8080/api/pressure/mode/FRAGMENTATION    # Compaction test
-curl -X POST http://localhost:8080/api/pressure/mode/CROSS_GEN_REFS   # Remembered set test
-curl -X POST http://localhost:8080/api/pressure/mode/OFF              # Stop pressure
-
-# Get current GC statistics
-curl http://localhost:8080/api/gc/stats    # C4 cluster
-curl http://localhost:9080/api/gc/stats    # G1GC cluster
-
-# Get current pressure status
-curl http://localhost:8080/api/pressure/status
-```
-
-Scenario Details:
-
-| Scenario        | Rate     | Target                 | Purpose                                   |
-|:----------------|:---------|:-----------------------|:------------------------------------------|
-| STEADY_LOAD     | 200 MB/s | 512 MB live set        | Tests baseline young GC pause behavior    |
-| GROWING_HEAP    | 150 MB/s | Grows to 2 GB          | Tests mixed collection pause scaling      |
-| PROMOTION_STORM | 300 MB/s | 1 GB with 50% survival | Tests old generation under high promotion |
-| FRAGMENTATION   | 200 MB/s | 1 GB fragmented        | Tests compaction with small objects       |
-| CROSS_GEN_REFS  | 150 MB/s | 800 MB old gen         | Tests remembered set scanning overhead    |
-
-### Java Flight Recorder (JFR)
-
-TradeStreamEE includes Java Flight Recorder integration for deep performance analysis and production profiling.
-JFR provides low-overhead continuous monitoring with the ability to capture detailed event traces for post-mortem analysis.
-
-#### Custom JFR Events
-
-The application defines domain-specific JFR events that correlate application behavior with JVM performance:
-
-| Event Name                | Description                                | Use Case                                  |
-|:--------------------------|:-------------------------------------------|:------------------------------------------|
-| `trade.published`         | Trade execution published to Aeron         | Measure publishing throughput and timing  |
-| `quote.published`         | Quote (bid/ask) published                  | Monitor quote rate per symbol             |
-| `marketdepth.published`   | Level 2 order book depth update            | Track L2 data frequency                   |
-| `sbe.encode`              | SBE binary encoding operation              | Analyze serialization latency             |
-| `sbe.decode`              | SBE binary decoding operation              | Measure deserialization overhead          |
-| `aeron.backpressure`      | Aeron publication backpressure detected    | Identify flow control issues              |
-| `burst.mode.activated`    | Burst mode triggered (1x/3x/5x multiplier) | Correlate burst patterns with GC behavior |
-| `gc.sla.violation`        | GC pause exceeded 10ms SLA threshold       | Track latency SLA breaches                |
-| `websocket.broadcast`     | Message broadcast to WebSocket clients     | Monitor frontend delivery rate            |
-| `message.batch.processed` | Batch of market messages processed         | Observe batch processing timing           |
-
-These events appear in JFR alongside standard JVM events (GC, allocation, CPU), enabling correlation between domain metrics (message rates, encoding latency) and runtime behavior (GC pauses, heap usage).
-
-#### JFR Configuration
-
-JFR is enabled by default in all Docker images with two recording modes:
-
-**Default Recording (Continuous)**
-- Runs from JVM startup
-- Circular buffer: 1 hour max age, 1GB max size
-- Dumps to disk on JVM exit (`dumponexit=true`)
-- Location: `/opt/payara/recordings/recording.jfr`
-- Purpose: Post-mortem analysis if JVM crashes or exits
-
-**Ad-hoc Snapshots (On-Demand)**
-- Started via web UI or REST API
-- Time-bounded captures (default: 60 seconds)
-- Dump immediately after capture window
-- Purpose: Capture specific test scenarios (stress tests, benchmark runs)
-
-#### JFR Web UI
-
-The web dashboard includes a JFR management interface accessible via the **JFR** button in the header:
-
-1. **List Recordings**: View all available `.jfr` files with size and timestamp
-2. **Download**: Click to download recordings for local analysis in JDK Mission Control
-3. **Capture Snapshot**: Start a new 60-second recording capture
-
-Example workflow:
-
-```bash
-# 1. Navigate to http://localhost:8080/trader-stream-ee/
-# 2. Click "JFR" button in header
-# 3. Click "Capture 60s Snapshot"
-# 4. Wait 60 seconds (or run a stress test scenario)
-# 5. Click "Download" on the new recording
-# 6. Open in JDK Mission Control for analysis
-```
-
-#### JFR REST API
-
-Programmatic control via REST endpoints:
-
-```bash
-# Check JFR availability and status
-curl http://localhost:8080/api/jfr/status
-
-# List all recordings (active and stopped)
-curl http://localhost:8080/api/jfr/recordings
-
-# List available .jfr files for download
-curl http://localhost:8080/api/jfr/files
-
-# Start a time-bounded recording
-curl -X POST "http://localhost:8080/api/jfr/recording/start?name=gc-stress&durationSeconds=120"
-
-# Stop a recording early
-curl -X POST "http://localhost:8080/api/jfr/recording/stop?id={recordingId}"
-
-# Download a specific recording
-curl -O http://localhost:8080/api/jfr/download/{filename}.jfr
-```
-
-#### Analyzing Recordings
-
-**Using JDK Mission Control (JMC)**
-
-```bash
-# Download from container
-docker cp trader-stream-c4-1:/opt/payara/recordings/{filename}.jfr ./analysis.jfr
-
-# Open in JMC
-jmc analysis.jfr
-```
-
-Key JMC views for HFT analysis:
-- **Automatic Analysis** (⚡): Flags GC pauses, allocation hotspots, thread contention
-- **Timeline**: Visualize event occurrence over time (zoom into GC pauses)
-- **Memory → GC Graph**: Correlate heap usage with pause times
-- **Event Browser**: Filter custom events (`trade.published`, `aeron.backpressure`)
-- **Code → Hot Methods**: Identify CPU bottlenecks in ingestion path
-
-**Using CLI (jfr command)**
-
-```bash
-# Summary statistics
-docker exec trader-stream-c4-1 jfr summary /opt/payara/recordings/{filename}.jfr
-
-# Print specific events
-docker exec trader-stream-c4-1 jfr print --events trade.published /opt/payara/recordings/{filename}.jfr
-
-# View metadata (event types)
-docker exec trader-stream-c4-1 jfr metadata /opt/payara/recordings/{filename}.jfr
-```
-
-#### Analysis Use Cases
-
-**GC Latency Investigation**
-1. Capture snapshot during stress test scenario
-2. Open in JMC → Timeline view
-3. Zoom into GC pause lanes
-4. Check if `trade.published` events continue during pauses (C4) or stop (G1GC)
-
-**Backpressure Analysis**
-1. Filter Event Browser for `aeron.backpressure`
-2. Examine stack traces to identify source
-3. Correlate with GC pause timing
-4. Check if burst mode activation precedes backpressure
-
-**Encoding Performance**
-1. View `sbe.encode` events
-2. Analyze `encodeTimeNanos` distribution
-3. Identify symbols with largest payloads
-4. Correlate with allocation rate (`jdk.ObjectAllocationInNewTLAB`)
-
-#### JVM Options
-
-JFR flags configured in Dockerfiles:
-
-```dockerfile
-# Default recording (continuous, dumps on exit)
--XX:StartFlightRecording=name=production,filename=/opt/payara/recordings/recording.jfr,dumponexit=true,maxage=1h,maxsize=1g
-
-# Flight recorder options
--XX:FlightRecorderOptions=samplethreads=true,stackdepth=256
-
-# JFR logging
--Xlog:jfr*=info
-```
-
-**Disable JFR** (if needed):
-
-```bash
-export JFR_ENABLED=false  # Disables default recording via StartFlightRecording
-```
-
-Note: Ad-hoc snapshots still work even when default recording is disabled.
+| Component          | Technology                                               | Version                                                       |
+|:-------------------|:---------------------------------------------------------|:--------------------------------------------------------------|
+| Language           | Java 21                                                  | Records, pattern matching, virtual threads, sealed interfaces |
+| Runtime            | Jakarta EE 11 / Payara Micro 7                           | CDI, WebSocket, REST, Concurrency 3.1                         |
+| Transport          | Aeron                                                    | 1.50.0 (IPC shared memory, kernel bypass)                     |
+| Serialization      | SBE (Simple Binary Encoding)                             | 1.34.0 (FIX standard, flyweight decoders)                     |
+| Technical Analysis | ta4j                                                     | 0.22.4                                                        |
+| Clustering         | Hazelcast                                                | 5.5.0 (distributed topics, atomic counters)                   |
+| GC Comparison      | Azul Platform Prime 21 (C4) vs Eclipse Temurin 21 (G1GC) |                                                               |
+| Frontend           | HTML5 + Chart.js + vanilla JS                            | No build tools, no frameworks                                 |
+| Observability      | Prometheus + Grafana + Loki + JFR                        |                                                               |
+| Build              | Maven (wrapper) + Docker                                 | Multi-stage builds                                            |
 
 ## Project Structure
 
 ```text
-src/main/
-├── java/fish/payara/trader/
-│   ├── aeron/          # Aeron Publisher, Subscriber, FragmentHandler
-│   ├── sbe/            # Generated SBE Codecs (Flyweights)
-│   ├── websocket/      # Jakarta WebSocket Endpoint
-│   ├── rest/           # Status, GC Stats, Memory Pressure, and JFR Resources
-│   ├── gc/             # GC statistics collection and monitoring
-│   ├── pressure/       # Memory pressure testing services
-│   └── monitoring/     # GC monitoring services (GCPauseMonitor, MemoryPressure)
-├── resources/sbe/
-│   └── market-data.xml # SBE Schema Definition
-└── webapp/
-    └── index.html      # Dashboard UI (Chart.js + WebSocket) with JFR controls
+src/main/java/fish/payara/trader/
+  aeron/           Aeron MediaDriver, Publisher, Subscriber, FragmentHandler
+  analysis/        BarAggregator, IndicatorService (ta4j bridge)
+  concurrency/     VirtualThreadExecutor qualifier, ManagedExecutorDefinition
+  demo/            DemoPresetService, scenario orchestration
+  dto/             REST response objects
+  gc/              GCStatsService, GCStats (JMX MXBean collection)
+  impact/          BusinessImpactCalculator (GC pauses -> dollar impact)
+  jfr/             Custom JFR events, recording management
+  matching/
+    book/          PriceTimeOrderBook, OrderBook (NavigableMap-based)
+    config/        MatchingConfig
+    engine/        MatchingEngine (central orchestrator)
+    exception/     Matching exceptions
+    history/       ExecutionHistory (circular buffer, query API)
+    model/         Order, Execution, Price, Side, OrderType, OrderStatus (records/enums)
+    position/      PositionService, PositionTracker (ConcurrentHashMap)
+    jfr/           Matching-specific JFR events
+    websocket/     ExecutionBroadcaster
+  monitoring/      GCPauseMonitor, SLAMonitorService, MemoryPressure
+  portfolio/       PortfolioService (NAV, Sharpe, drawdown, rebalance)
+  pressure/        MemoryPressureService, AllocationMode, Workload implementations
+    workload/      8 CPU/GC stress workloads (TradingMatching, Collection, Compression, etc.)
+  risk/
+    model/         Position, RiskSnapshot, StressScenario (sealed), VarResult
+    RiskEngine     VaR computation, stress testing
+    RiskConfig     Position limits
+  rest/            16 JAX-RS resource classes (ApplicationConfig, CorsFilter)
+  util/            Instance utilities
+  websocket/       MarketDataBroadcaster (Hazelcast topic + WebSocket fan-out)
+
+src/main/resources/
+  sbe/market-data.xml         SBE schema (23 message types, FIX-inspired)
+  demo-presets.yml            5 demo scenario definitions
+  microprofile-config.properties
+  hazelcast-config.xml        Hazelcast 5.5.0 (TCP/IP discovery for Docker)
+
+src/main/webapp/
+  index.html        Main dashboard (GC charts, market data, demo presets)
+  trading.html      Trading desk (order entry, order book, positions)
+  comparison.html   C4 vs G1 side-by-side view
+  presentation.html Conference presentation mode
+  blog.html         Documentation page
+  health.html       Health check
+  help.html         Usage guide
+  swagger.html      API documentation
+  trading.js        Trading desk client logic
+  pressure-modes.js Shared GC stress scenario selector
 
 monitoring/
-├── grafana/
-│   ├── provisioning/   # Grafana datasources and dashboard configs
-│   └── dashboards/     # Pre-configured JVM comparison dashboard
-├── jmx-exporter/       # JMX exporter configuration and JAR
-├── prometheus/         # Prometheus configuration
-├── loki/              # Loki log aggregation config
-└── promtail/          # Promtail log shipping config
-
-start-comparison.sh           # Automated deployment script for JVM comparison
-stop-comparison.sh            # Stop script for comparison services
-docker-compose-c4.yml          # Azul Prime C4 cluster setup
-docker-compose-g1.yml          # Eclipse Temurin G1GC cluster setup
-docker-compose-monitoring.yml  # Monitoring stack (Prometheus, Grafana, Loki)
-Dockerfile.scale               # Multi-stage build for C4 instances
-Dockerfile.scale.standard      # Build for G1GC instances
+  grafana/          Provisioning configs, dashboards
+  jmx-exporter/     Prometheus JMX exporter
+  prometheus/       Prometheus config
+  loki/             Log aggregation config
+  promtail/         Log shipping config
 ```
 
-## Testing & Quality Assurance
+## REST API
 
-### Quick Test Execution
+All endpoints under `/api/`.
+
+### Trading
+
+| Method | Path                             | Description             |
+|:-------|:---------------------------------|:------------------------|
+| POST   | `/matching/orders`               | Submit an order         |
+| DELETE | `/matching/orders/{orderId}`     | Cancel an order         |
+| GET    | `/matching/orders`               | List orders             |
+| GET    | `/matching/orders/book/{symbol}` | Order book snapshot     |
+| GET    | `/matching/order-book/{symbol}`  | Order book for a symbol |
+| GET    | `/matching/positions`            | All positions           |
+| GET    | `/matching/positions/{symbol}`   | Position for a symbol   |
+| GET    | `/matching/executions`           | Execution history       |
+
+### Risk & Portfolio
+
+| Method | Path                    | Description                |
+|:-------|:------------------------|:---------------------------|
+| GET    | `/risk`                 | Risk overview              |
+| GET    | `/risk/{symbol}`        | Risk snapshot for a symbol |
+| GET    | `/risk/metrics`         | Risk metrics               |
+| GET    | `/risk/var`             | Value at Risk              |
+| GET    | `/risk/stress`          | Stress test results        |
+| GET    | `/risk/exposure`        | Portfolio exposure         |
+| POST   | `/risk/limits/{symbol}` | Set position limits        |
+| GET    | `/portfolio`            | Portfolio overview         |
+| GET    | `/portfolio/snapshot`   | NAV snapshot               |
+| GET    | `/portfolio/metrics`    | Sharpe, drawdown, win rate |
+| POST   | `/portfolio/rebalance`  | Generate rebalance plan    |
+| POST   | `/portfolio/reset`      | Reset portfolio state      |
+| GET    | `/analysis/{symbol}`    | Technical indicators       |
+
+### Monitoring & GC
+
+| Method | Path               | Description                    |
+|:-------|:-------------------|:-------------------------------|
+| GET    | `/gc/stats`        | GC pause percentiles           |
+| GET    | `/gc/comparison`   | Cluster comparison data        |
+| GET    | `/gc/pauses`       | Recent pause history           |
+| GET    | `/gc/sla`          | SLA violation counts           |
+| POST   | `/gc/reset`        | Reset GC statistics            |
+| POST   | `/gc/sla/reset`    | Reset SLA counters             |
+| POST   | `/gc/pauses/reset` | Reset pause history            |
+| GET    | `/status`          | System status                  |
+| GET    | `/status/cluster`  | Hazelcast cluster info         |
+| GET    | `/health/check`    | Health check                   |
+| GET    | `/health/ready`    | Readiness probe                |
+| GET    | `/health/live`     | Liveness probe                 |
+| GET    | `/business/impact` | Business impact of GC pauses   |
+| GET    | `/business/config` | Business impact configuration  |
+| POST   | `/business/reset`  | Reset business impact counters |
+
+### Memory Pressure
+
+| Method | Path                    | Description                   |
+|:-------|:------------------------|:------------------------------|
+| POST   | `/pressure/mode/{mode}` | Set GC stress scenario        |
+| GET    | `/pressure/status`      | Current pressure status       |
+| GET    | `/pressure/modes`       | Available scenarios and types |
+
+Memory scenarios: `STEADY_LOAD`, `GROWING_HEAP`, `PROMOTION_STORM`, `FRAGMENTATION`, `CROSS_GEN_REFS`, `OFF`
+
+CPU workloads: `TRADING_MATCHING`, `TECHNICAL_ANALYSIS`, `COMPRESSION`, `CRYPTO`, `COLLECTION`, `SERIALIZATION`, `STRING`
+
+### Demo Presets & JFR
+
+| Method | Path                                   | Description                    |
+|:-------|:---------------------------------------|:-------------------------------|
+| GET    | `/demo/presets`                        | List all demo presets          |
+| GET    | `/demo/preset/{id}`                    | Get a demo preset              |
+| POST   | `/demo/preset/{id}/start`              | Start a demo preset            |
+| GET    | `/demo/execution/{executionId}`        | Get execution status           |
+| POST   | `/demo/execution/{id}/step/{n}`        | Step through a preset          |
+| POST   | `/demo/execution/{executionId}/cancel` | Cancel a preset execution      |
+| GET    | `/jfr/status`                          | JFR availability               |
+| GET    | `/jfr/recordings`                      | List recordings                |
+| GET    | `/jfr/files`                           | Available .jfr downloads       |
+| GET    | `/jfr/stats`                           | JFR statistics                 |
+| POST   | `/jfr/recording/start`                 | Start a time-bounded recording |
+| POST   | `/jfr/recording/stop`                  | Stop a recording               |
+| GET    | `/jfr/download/{file}`                 | Download a recording           |
+
+## GC Monitoring & Stress Testing
+
+### Memory Pressure Scenarios
+
+`MemoryPressureService` generates controlled allocation pressure with 4 parallel virtual threads. Each scenario targets specific GC algorithm weaknesses.
+
+| Scenario        | Rate     | Live Set                | What It Tests                        |
+|:----------------|:---------|:------------------------|:-------------------------------------|
+| STEADY_LOAD     | 200 MB/s | 512 MB stable           | Baseline young generation collection |
+| GROWING_HEAP    | 150 MB/s | 100 MB to 2 GB over 60s | Mixed collection pause scaling       |
+| PROMOTION_STORM | 300 MB/s | 1 GB (50% survival)     | Old gen under high promotion         |
+| FRAGMENTATION   | 200 MB/s | 1 GB fragmented         | Compaction behavior                  |
+| CROSS_GEN_REFS  | 150 MB/s | 800 MB in old gen       | Remembered set scanning overhead     |
+
+Expected behavior: G1GC shows stop-the-world pauses that scale with live set size. C4 maintains pauses at or below 1ms across all scenarios.
+
+### JFR Integration
+
+Java Flight Recorder runs by default (circular buffer, 1h/1GB, dumps on exit). 14 custom JFR events correlate domain metrics with JVM behavior:
+
+Market data: `TradePublished`, `QuotePublished`, `MarketDepthPublished`, `BatchProcessed`, `WebSocketBroadcast`
+Pipeline: `SbeEncode`, `SbeDecode`, `BackpressureEvent`, `BurstModeActivated`, `SlaViolation`
+Matching: `OrderSubmitted`, `OrderMatched`, `StopTriggered`, `OrderCanceled`
+
+Capture ad-hoc snapshots from the web UI or via REST:
 
 ```bash
-# Quick test (unit tests only, ~30 seconds)
-./test.sh quick
-
-# Full test suite (unit + integration, 2-5 minutes)
-./test.sh full
-
-# Maven commands
-./mvnw test                    # Unit tests
-./mvnw jacoco:report          # Generate coverage report
+curl -X POST "http://localhost:8080/api/jfr/recording/start?name=gc-stress&durationSeconds=120"
+curl http://localhost:8080/api/jfr/download/gc-stress.jfr -o analysis.jfr
+jmc analysis.jfr
 ```
 
-### Current Test Coverage
+## Configuration & Tuning
 
-Working Tests (170/170 passing):
+### Environment Variables
 
-- Monitoring & GC: Full coverage of SLA monitoring logic and GC notification handling.
-- REST Resources: Comprehensive tests for Memory Pressure and GC Stats endpoints.
-- Core Logic: Validated `AllocationMode` and concurrency configurations.
-- WebSockets: Verified `MarketDataBroadcaster` functionality and session management.
+| Variable                | Values                          | Default | Description                   |
+|:------------------------|:--------------------------------|:--------|:------------------------------|
+| `TRADER_INGESTION_MODE` | `AERON`, `DIRECT`               | `AERON` | Data ingestion architecture   |
+| `ENABLE_PUBLISHER`      | `true`, `false`                 | -       | Enable market data publishing |
+| `JFR_ENABLED`           | `true`, `false`                 | `true`  | Enable default JFR recording  |
+| `JVM_TYPE`              | `azul-c4`, `eclipse-temurin-g1` | -       | Label for monitoring          |
 
-Coverage Metrics:
+### JVM Heap Sizes
 
-- Tests: 170 unit tests with 100% pass rate
-- Monitoring Coverage: ≥90% (SLAMonitor, GCStatsService)
-- REST API Coverage: ≥85% (Resources and DTOs)
-- Instruction Coverage: High coverage for business logic; integration logic relies on `test.sh`.
+| Deployment              | Dockerfiles                                     | Heap | Reason             |
+|:------------------------|:------------------------------------------------|:-----|:-------------------|
+| Single instance         | `Dockerfile`, `Dockerfile.standard`             | 8 GB | Maximum throughput |
+| Clustered (3 instances) | `Dockerfile.scale`, `Dockerfile.scale.standard` | 4 GB | ~12 GB per cluster |
 
-### Test Categories
+### Notable JVM Flags (Both)
 
-1. Unit Tests: Core component testing in isolation (`src/test/java`)
-2. Integration Tests: Service layer interactions and resource validation
-3. Performance Tests: Load testing and benchmarks via scripts
-4. Memory Pressure Tests: GC behavior validation and stress scenarios
+`AlwaysPreTouch`, `UseTransparentHugePages`, `UseStringDeduplication`, `OptimizeStringConcat`, `UseContainerSupport`, `MaxRAMPercentage=75.0`, `--add-opens` for Aeron's `Unsafe` usage (`jdk.internal.misc`, `sun.nio.ch`, `java.nio`)
+
+G1GC instances add: `G1HeapRegionSize=16m`, `MaxGCPauseMillis=10`, `ParallelGCThreads=12`, `ConcGCThreads=4`
+
+## Testing
+
+```bash
+./test.sh quick          # Unit tests only (~30 seconds)
+./test.sh full           # Unit + integration tests
+./test.sh unit           # Unit tests
+./test.sh integration    # Integration tests
+./test.sh coverage       # Generate JaCoCo report
+./test.sh benchmarks     # JMH benchmarks
+```
+
+Maven commands:
+
+```bash
+./mvnw test                        # Unit tests (JaCoCo enforced)
+./mvnw verify                      # Unit + integration (Failsafe)
+./mvnw clean package -Pquick-test   # Exclude integration/load/benchmark
+./mvnw clean verify -Pcoverage     # CI coverage report (relaxed thresholds)
+```
+
+Coverage gates (default): 70% instruction, 60% branch, 80% class.
+
+Test stack: JUnit 5.13.4 + Mockito 5.20.0 + AssertJ 3.27.6. Tests instantiate objects directly with field-injected mocks. No CDI containers in unit tests.
+
+## Building
+
+```bash
+./mvnw clean package              # Full build with tests
+./mvnw clean package -DskipTests  # Build without tests
+```
+
+Build pipeline: SBE code generation (`exec-maven-plugin` against `market-data.xml`) -> compile (Java 21) -> WAR packaging -> test -> JaCoCo report -> Spotless format check.
+
+Maven wrapper included.
+
+## Docker
+
+Four Dockerfiles for the JVM comparison matrix:
+
+| Dockerfile                  | Runtime            | JVM  | Cluster                   |
+|:----------------------------|:-------------------|:-----|:--------------------------|
+| `Dockerfile`                | Azul Prime 21      | C4   | No                        |
+| `Dockerfile.standard`       | Eclipse Temurin 21 | G1GC | No                        |
+| `Dockerfile.scale`          | Azul Prime 21      | C4   | Yes (Hazelcast + Traefik) |
+| `Dockerfile.scale.standard` | Eclipse Temurin 21 | G1GC | Yes (Hazelcast + Traefik) |
+
+All use multi-stage builds: compile on `azul/zulu-openjdk:21`, copy WAR to runtime image. Payara Micro 7.2026.3 downloaded at build time.
+
+Six docker-compose files: `docker-compose.yml` (single C4), `docker-compose-standard.yml` (single G1), `docker-compose-scale.yml` (dynamic cluster), `docker-compose-c4.yml` (3-instance C4 + Traefik + JMX exporter), `docker-compose-g1.yml` (3-instance G1 + Traefik + JMX exporter), `docker-compose-monitoring.yml` (Prometheus + Grafana + Loki + Promtail).
+
+## Design Patterns
+
+- **Flyweight** - SBE decoders wrap DirectBuffer at different offsets. No allocation per message.
+- **Sealed Interface** - `StressScenario` with five record implementations. Pattern matching dispatches stress tests.
+- **Strategy** - `MatchingStrategy` interface with `PriceTimePriorityMatcher` implementation.
+- **Observer** - JMX `NotificationListener` on GC beans. JFR events as telemetry observation layer.
+- **CDI Qualifier** - `@VirtualThreadExecutor` injects a virtual-thread-based `ManagedExecutorService` via `@ManagedExecutorDefinition(virtual = true)`.
+
+## SBE Wire Protocol
+
+`market-data.xml` defines 23 FIX-inspired message types. Code generated at build time into `fish.payara.trader.sbe`. All prices use `int64` fixed-point (multiply by 10000 for decimal). Currently 5 message types are decoded in the ingestion path: Trade, Quote, MarketDepth, OrderAck, Heartbeat. The remaining 18 exist as pre-built infrastructure for the full trading lifecycle.
+
+## Key Design Decisions
+
+1. **Intentional garbage generation** - JSON construction via `StringBuilder` in the broadcast path is deliberately unoptimized. This creates measurable allocation pressure to demonstrate GC behavior differences.
+
+2. **1:50 sampling** - Only every 50th message reaches the browser. All messages still flow through the SBE decoder and matching engine. The browser gets 600-2000 updates/sec, not 30,000-100,000.
+
+3. **In-memory state** - Order books, positions, execution history, and bar data live in ConcurrentHashMaps and NavigableMaps. No database. Restarting loses all state. `persistence.xml` exists but is unused.
+
+4. **Hazelcast for cluster fan-out** - In multi-instance mode, market data published on one instance is distributed to all instances via a Hazelcast `ITopic`. WebSocket clients on any instance receive all messages.
+
+5. **Burst pattern** - The publisher runs 500 base iterations (3 messages each) per cycle with 5us parks. Burst multiplier spikes to 5x during "news events" (seconds 20-25 of each minute) and 3x during "market close" (seconds 45-50). Circuit breaker stops after 50 consecutive failures.
 
 ## Trading Terms Glossary
 
-For readers unfamiliar with high-frequency trading concepts, this glossary explains the domain-specific terms used throughout this project.
+### Market Data
 
-### Market Data & Trading
+| Term                          | Definition                                                                                                          |
+|:------------------------------|:--------------------------------------------------------------------------------------------------------------------|
+| High-Frequency Trading (HFT)  | Automated strategies executing thousands of orders per second. Sub-millisecond latency is a hard requirement.       |
+| Order Book / Limit Order Book | Data structure containing all buy and sell orders, organized by price level. Updated thousands of times per second. |
+| Bid / Ask                     | Highest price a buyer will pay / lowest price a seller will accept.                                                 |
+| Bid-Ask Spread                | Difference between best bid and best ask. Cost of immediate execution.                                              |
+| L1 / L2 / L3 Data             | Level 1: best bid/ask. Level 2: multiple price levels with depth. Level 3: individual orders.                       |
+| Crossed Market                | Best bid exceeds best ask. Indicates data error or system malfunction.                                              |
 
-| Term                          | Definition                                                                                                                                                                                                                                                                    |
-|:------------------------------|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| High-Frequency Trading (HFT)  | Automated trading strategies that execute thousands or millions of orders per second, requiring sub-millisecond latency. HFT systems are extremely sensitive to processing delays, making garbage collection pauses a critical performance concern.                           |
-| Order Book / Limit Order Book | A data structure containing all buy and sell orders for a security, organized by price level. Each price level (e.g., $100.50) contains multiple orders waiting to be filled. Order books are updated thousands of times per second in active markets.                        |
-| Bid                           | The highest price a buyer is willing to pay for a security.                                                                                                                                                                                                                   |
-| Ask                           | The lowest price a seller is willing to accept.                                                                                                                                                                                                                               |
-| Bid-Ask Spread                | The difference between bid and ask prices, representing the cost of immediate execution.                                                                                                                                                                                      |
-| Market Tick / Price Tick      | A single price update event in the market. High-frequency systems process tens of thousands of ticks per second, with each tick containing price, volume, and timestamp information.                                                                                          |
-| L1 Data (Level 1)             | Best bid and ask prices only (top of book).                                                                                                                                                                                                                                   |
-| L2 Data (Level 2)             | Multiple price levels showing aggregate size at each price (market depth).                                                                                                                                                                                                    |
-| L3 Data (Level 3)             | Individual orders at each price level (full order book).                                                                                                                                                                                                                      |
-| Price Ladder                  | The hierarchical structure of bid and ask prices in an order book. Bid prices decrease as you move away from the best bid; ask prices increase as you move away from the best ask.                                                                                            |
-| Crossed Market                | An abnormal market condition where the best bid price is higher than the best ask price. This should never occur in normal trading and indicates a data error or system malfunction.                                                                                          |
-| Flash Crash                   | A sudden, severe market downturn followed by rapid recovery, often triggered by algorithmic trading systems. The 2010 Flash Crash saw the Dow Jones drop nearly 1,000 points in minutes. These events create extreme allocation bursts as systems process massive order flow. |
-| SLA (Service Level Agreement) | Performance guarantees, such as "99.9% of trades execute within 5ms". GC pauses can cause SLA violations if they exceed latency budgets.                                                                                                                                      |
+### Memory & GC
 
-### Memory & Performance
+| Term                  | Definition                                                                                   |
+|:----------------------|:---------------------------------------------------------------------------------------------|
+| Allocation Rate       | Speed of object creation (bytes/sec). Higher rates increase GC pressure.                     |
+| Live Set              | Total size of reachable objects. G1's mixed collection pause time scales with live set size. |
+| Concurrent Collection | GC running alongside application threads. C4 is concurrent; G1GC uses stop-the-world pauses. |
+| Promotion             | Moving objects from young to old generation after surviving multiple collections.            |
+| Remembered Set        | G1 data structure tracking old-to-young references. Scanning adds overhead. C4 has none.     |
+| Heap Fragmentation    | Free space scattered in small chunks. G1 pauses to compact; C4 compacts concurrently.        |
 
-| Term                              | Definition                                                                                                                                                                                              |
-|:----------------------------------|:--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Allocation Rate                   | The speed at which a program creates new objects in memory, measured in bytes per second (e.g., "200 MB/sec allocation rate"). Higher allocation rates increase garbage collection pressure.            |
-| GC Pressure / Memory Pressure     | The workload placed on the garbage collector due to object allocation. Higher pressure leads to more frequent garbage collection cycles and potentially longer pause times.                             |
-| Pause Time / Stop-the-World Pause | Duration when a garbage collector halts all application threads to perform cleanup. For HFT systems, even millisecond-level pauses can cause missed trading opportunities or regulatory violations.     |
-| Concurrent Collection             | Garbage collection that runs simultaneously with application threads, avoiding stop-the-world pauses. Azul C4 is a concurrent collector; G1GC uses stop-the-world pauses.                               |
-| Live Set                          | The total size of objects currently reachable from application roots. Larger live sets increase GC work during marking phases. G1's mixed collection pause time scales with live set size.              |
-| Promotion / Promotion Rate        | Moving objects from young generation to old generation after surviving multiple collections. High promotion rates force frequent old generation collections.                                            |
-| Remembered Set                    | G1 data structure tracking references from old generation to young generation. Scanning remembered sets adds overhead to young GC pauses. C4 has no generational boundaries, eliminating this overhead. |
-| Cross-Generational Reference      | A reference from an old generation object to a young generation object. G1 must track these via card tables and remembered sets; every such reference update triggers a write barrier.                  |
-| Heap Fragmentation                | Memory fragmentation where free space is scattered in small chunks. G1 must pause to compact fragmented regions; C4 compacts concurrently using read barriers.                                          |
-| Tenured Objects / Old Generation  | Long-lived objects that survive multiple garbage collection cycles and are promoted to the "old generation" heap region. Order books are typically tenured since they persist across many tick updates. |
+### Serialization & Performance
 
-### Data Structures & Patterns
-
-| Term                               | Definition                                                                                                                                                                                               |
-|:-----------------------------------|:---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Columnar Storage / Columnar Format | Storing data by column rather than by row (e.g., all prices in one array, all volumes in another). This improves cache locality and enables SIMD operations. Our `MarketTickPattern` uses this approach. |
-| Flyweight Pattern                  | A design pattern that reuses objects to minimize memory allocation. SBE codecs use flyweights, they're views over byte buffers rather than allocated objects.                                            |
-| Zero-Copy                          | Data processing without copying bytes between buffers. Aeron IPC and SBE both use zero-copy techniques to minimize allocation and improve throughput.                                                    |
-| Hierarchical Object Graph          | Objects containing references to other objects in a tree structure. Our `OrderBookPattern` creates these: OrderBook, PriceLevel[], Order[].                                                              |
-
-### Serialization & Messaging
-
-| Term                                    | Definition                                                                                                                                                                        |
-|:----------------------------------------|:----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| SBE (Simple Binary Encoding)            | A binary serialization format designed for financial trading systems. FIX (Financial Information eXchange) protocol organization standardized it for ultra-low-latency scenarios. |
-| Aeron IPC (Inter-Process Communication) | A messaging transport that uses shared memory for same-machine communication, bypassing kernel networking overhead. Achieves sub-microsecond latency.                             |
-| Message Batching                        | Grouping multiple messages together for efficient processing. Our `MarketTickPattern` simulates batches of 50-200 ticks processed together.                                       |
-
-### Performance Metrics
-
-| Term                  | Definition                                                                                                                                                                          |
-|:----------------------|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Latency               | The time delay between an event occurring and the system responding. HFT systems target sub-millisecond (< 1ms) latency for end-to-end trade execution.                             |
-| Throughput            | The volume of work completed per unit time (e.g., "1 million messages per second"). HFT systems require both high throughput and low latency simultaneously.                        |
-| P50 (Median)          | 50% of requests complete faster than this value.                                                                                                                                    |
-| P95 (95th Percentile) | 95% of requests complete faster than this value (1 in 20 is slower).                                                                                                                |
-| P99 (99th Percentile) | 99% of requests complete faster than this value (1 in 100 is slower).                                                                                                               |
-| Jitter                | Variability in latency. Even with good average latency, high jitter (unpredictable spikes) is unacceptable for HFT. G1GC tends to show jitter under load; C4 maintains consistency. |
-
-### Trading System Architecture
-
-| Term                                 | Definition                                                                                                                                                                 |
-|:-------------------------------------|:---------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Ingestion Pipeline / Ingestion Layer | The component responsible for receiving and processing incoming market data feeds. Must handle extreme throughput (millions of messages/sec) with minimal latency.         |
-| Hot Path / Critical Path             | The code execution path that runs most frequently and must be highly optimized. In HFT, the ingestion and order routing paths are hot paths where even nanoseconds matter. |
-| Market Event                         | Significant market occurrences that trigger increased trading activity: market open/close, economic announcements, earnings releases, or sudden price movements.           |
+| Term            | Definition                                                                                |
+|:----------------|:------------------------------------------------------------------------------------------|
+| SBE             | Simple Binary Encoding. FIX-standard binary format for ultra-low-latency trading systems. |
+| Aeron IPC       | Shared-memory messaging transport. Bypasses kernel networking. Sub-microsecond latency.   |
+| Flyweight       | Reusable objects over byte buffers. SBE decoders are flyweights, not allocated objects.   |
+| Zero-Copy       | Processing data without copying between buffers. Both Aeron IPC and SBE use zero-copy.    |
+| P50 / P95 / P99 | Percentile latencies. 50% / 95% / 99% of requests complete faster than this value.        |
+| Jitter          | Latency variability. High jitter (unpredictable spikes) is unacceptable for HFT.          |
 
 ## References
 
-- [Azul C4 Garbage Collection Documentation](https://docs.azul.com/prime/c4-garbage-collection.html)
-- [Azul Platform Prime Product Page](https://www.azul.com/products/components/pgc/)
-- [Explanation of Azul's "Pauseless" Garbage Collector](https://stackoverflow.com/questions/4491260/explanation-of-azuls-pauseless-garbage-collector)
-- [What To Expect When Evaluating Azul Platform Prime](https://docs.azul.com/prime/what-to-expect)
-- [Apache Kafka Performance on Azul Platform Prime vs Vanilla OpenJDK](https://www.azul.com/blog/apache-kafka-performance-on-azul-platform-prime-vs-vanilla-openjdk/)
+- [Azul C4 Garbage Collection](https://docs.azul.com/prime/c4-garbage-collection.html)
+- [Azul Platform Prime](https://www.azul.com/products/components/pgc/)
+- [Aeron Messaging](https://aeron.io/)
+- [Simple Binary Encoding](https://github.com/Real-Logic-FIX/Simple-Binary-Encoding)
+- [Payara Platform](https://www.payara.fish/)
+- [ta4j Technical Analysis](https://ta4j.github.io/)
 
 ## License
 
